# nds-py

./: .editorconfig  .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml
Src/: ndomsort.py  tests_ndomsort.py
nds/: ndomsort.py  stools.py  tests_ndomsort.py  tests_stools.py
tests/: tests_ndomsort.py  tests_stools.py
