[metadata]
name = nds
author = Alexander Kryuchkov
author_email = KernelA@users.noreply.github.com
description = Non-dominated sorting algorithm.
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.4.3
license = MIT
url = https://github.com/KernelA/nds-py
project_urls =
    Bug Tracker = https://github.com/KernelA/nds-py/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation